--- a/src/06_ametop_final_report.Rmd
+++ b/src/06_ametop_final_report.Rmd
@@ -80,7 +80,7 @@ The dataset has several key variables, categorized as follows:
 - **FPS-R Scores:** Patients’ pain levels are rated using the Faces Pain Scales-Revised scale from 0 (no pain) to 10 (worst pain possible), offering a measurable discomfort level during IV insertion. This score determines the primary outcome, that is, the effectiveness of different treatment approaches.
 - **Number of IV Attempts:** This variable represents the number of attempts needed for a successful IV insertion, reflecting the procedural difficulty and its potential correlation with patient discomfort.
 - **Side Effects:** Side effects, including the appearance of redness, sensations of itchiness, puffiness, or pain, are recorded to check if participants’ experience of any severe adverse reactions to the treatment.
-- **Observer Scores:** Observer scores are recorded based on the patients’ observed discomfort, which was evaluated by a nurse using a 3-point scale: 'none,' 'slight pain,' or 'severe pain.' This approach helps validate the primary outcome, the FPS-R scores, by ensuring a reliable assessment of pain in children who may not fully understand the FPS-R pictogram. In our subsequent statistical analysis, we will focus primarily on the FPS-R scores rather than the observer scores
+- **Observer Scores:** Observer scores are recorded based on the patients’ observed discomfort, which was evaluated by a nurse using a 3-point scale: 'none,' 'slight pain,' or 'severe pain.' This approach helps validate the primary outcome, the FPS-R scores, by ensuring a reliable assessment of pain in children who may not fully understand the FPS-R pictogram. In our subsequent statistical analysis, we will focus primarily on the FPS-R scores rather than the observer scores.
 
 Other than these variables, there are nine controlled variables, including whether the patient has any Ametop allergies or a needle phobia. These control variables ensure that participants meet the eligibility criteria for the study.
 
